exports[`LanguageError > create() > Should create correctly 1`] = `
{
  "range": {
    "start": 0,
    "end": 1
  },
  "message": "Error message",
  "severity": 3
}
`;

exports[`LanguageError > create() > Should create correctly 2`] = `
{
  "range": {
    "start": 0,
    "end": 1
  },
  "message": "Error message",
  "severity": 2
}
`;

exports[`LanguageError > create() > Should create correctly 3`] = `
{
  "range": {
    "start": 0,
    "end": 1
  },
  "message": "Error message",
  "severity": 2,
  "info": {
    "deprecated": true
  }
}
`;
